chef-stacktrace.out
Generated at 2012-04-12 03:41:39 -0500
SyntaxError: /home/da01/MyLife/apps/SITES/miniuni_mind/cookbooks/UPTIME/recipes/info.rb:3: syntax error, unexpected tIDENTIFIER, expecting keyword_end
  str = ""node.keys.each { |k|
              ^
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/mixin/from_file.rb:30:in `instance_eval'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/mixin/from_file.rb:30:in `from_file'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/cookbook_version.rb:578:in `load_recipe'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/mixin/language_include_recipe.rb:40:in `block in include_recipe'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/mixin/language_include_recipe.rb:27:in `each'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/mixin/language_include_recipe.rb:27:in `include_recipe'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/run_context.rb:72:in `block in load'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/run_context.rb:69:in `each'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/run_context.rb:69:in `load'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/client.rb:195:in `setup_run_context'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/client.rb:159:in `run'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/application/solo.rb:192:in `block in run_application'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/application/solo.rb:183:in `loop'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/application/solo.rb:183:in `run_application'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/lib/chef/application.rb:67:in `run'
/home/da01/.rbenv/versions/1.9.3-p125/lib/ruby/gems/1.9.1/gems/chef-0.10.8/bin/chef-solo:25:in `<top (required)>'
/home/da01/.rbenv/versions/1.9.3-p125/bin/chef-solo:19:in `load'
/home/da01/.rbenv/versions/1.9.3-p125/bin/chef-solo:19:in `<main>'